# rusty-todos

./: .gitignore  README.md  samconfig.toml  template.yaml
graphql/: Cargo.toml
graphql/src/: db.rs  main.rs  schema.rs
queries/: addTodo.gql  markTodoComplete.gql  schema.gql  user.gql  users.gql
