[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
async-graphql = "5.0.9"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
itertools = "0.10.5"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_28"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.3.3", features = ["v4"]}

